force-app/main/default/objects/Subscription_Line_Item__c/Subscription_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Subscription Line Item</label>
    <nameField>
        <displayFormat>Sub-Item-{0000}</displayFormat>
        <label>Subscription Line Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscription Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>