force-app/main/default/objects/Subscription_Line_Item__c/fields/Chargeover_Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>Chargeover_Subscription_ID__c</fullName>
    <label>Chargeover Subscription ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>