force-app/main/default/objects/Subscription_Line_Item__c/fields/Enr_Status__c.field-meta.xml
<CustomField>
    <fullName>Enr_Status__c</fullName>
    <formula>TEXT(Enrolment__r.Stage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enr Status</label>
    <type>Text</type>
</CustomField>