force-app/main/default/objects/Subscription_Line_Item__c/fields/Plan_Package__c.field-meta.xml
<CustomField>
    <fullName>Plan_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan/Package</label>
    <referenceTo>Package__c</referenceTo>
    <relationshipLabel>Subscription Line Items</relationshipLabel>
    <relationshipName>Subscription_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>