force-app/main/default/objects/Subscription_Line_Item__c/fields/subsl1__c.field-meta.xml
<CustomField>
    <fullName>subsl1__c</fullName>
    <formula>Subscription_Start_Date__c -  Next_Bill_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>subsl1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>