force-app/main/default/objects/Subscription_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Sub-Item-0618;Sub-Item-0882;</value>
    </filters>
    <label>All</label>
</ListView>